<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.nute</groupId>
	<artifactId>copcontroller</artifactId>
	<version>1.0</version>
	<name>Cop controller for the robocar project</name>
	<url>https://github.com/nuteee/copcontroller</url>
	<description><!-- TODO  --></description>
	<organization>
		<name>Gergő Balkus, University of Debrecen</name>
		<url>http://www.inf.unideb.hu/</url>
	</organization>
	<inceptionYear>2016</inceptionYear>
	<developers>
		<developer>
			<id>nuteee</id>
			<name>Gergő Balkus</name>
			<email>gergo.balkus@gmail.com</email>
			<url>http://www.inf.unideb.hu/</url>
			<organization>University of Debrecen</organization>
			<organizationUrl>http://www.inf.unideb.hu/</organizationUrl>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/nuteee/copcontroller/</url>
	</scm>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<mainClass>com.nute.copcontroller.ui.CopController</mainClass>
		<RESOURCE_PATH>${project.basedir}/src/main/resources</RESOURCE_PATH>
	</properties>
	<packaging>jar</packaging>
	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.12</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jxmapviewer</groupId>
			<artifactId>jxmapviewer2</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>maven</groupId>
			<artifactId>maven-jar-plugin</artifactId>
			<version>1.8.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>2.0.2-beta</version>
		</dependency>
		<dependency>
			<groupId>com.graphhopper</groupId>
			<artifactId>graphhopper</artifactId>
			<version>0.6.0</version>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>jul</id>
			<dependencies>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-jdk14</artifactId>
					<version>1.7.12</version>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>logback</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-core</artifactId>
					<version>1.1.3</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
					<version>1.1.3</version>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>nop</id>
			<dependencies>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-nop</artifactId>
					<version>1.7.12</version>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>simple</id>
			<dependencies>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
					<version>1.7.12</version>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
	<distributionManagement>
		<site>
			<id>shrek</id>
			<url>scp://shrek.unideb.hu/home/nute/public_html/${project.artifactId}</url>
		</site>
		<repository>
			<id>internal</id>
			<url>http://127.0.0.1:8080/repository/internal/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<url>http://127.0.0.1:8080/repository/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.4.0</version>
				<configuration>
					<mainClass>${mainClass}</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<sourceEncoding>utf-8</sourceEncoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>${mainClass}</mainClass>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
						<descriptorRef>project</descriptorRef>
					</descriptorRefs>
					<outputDirectory>${project.reporting.outputDirectory}</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<instrumentation>
						<excludes>
							<exclude><!-- TODO pkg/snake/Control/Tadapter.class -->
							</exclude>
							<exclude><!-- TODO pkg/snake/View/*.class -->
							</exclude>
						</excludes>
					</instrumentation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.4</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>2.9</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
		<resources>
            <resource>
                <directory>${RESOURCE_PATH}</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<instrumentation>
						<excludes>
							<exclude>pkg/snake/Control/Tadapter.class</exclude>
							<exclude>pkg/snake/View/*.class</exclude>
						</excludes>
					</instrumentation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.14</version>
				<configuration>
					<configLocation>${basedir}/src/main/resources/checkstyle.xml</configLocation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.18.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.2</version>
				<configuration>
					<locale>en_US</locale>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<repositories>
		<repository>
			<id>lds-main</id>
			<url>https://code.lds.org/nexus/content/groups/main-repo</url>
		</repository>
	</repositories>
</project>